@@ -2,30 +2,15 @@ package nl.nn.adapterframework.pipes;
 
 import static org.junit.Assert.assertEquals;
 
-import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
-import javax.wsdl.WSDLException;
-
 import org.junit.Ignore;
 import org.junit.Test;
-import org.mockito.Mockito;
-import org.xml.sax.SAXException;
 
-import nl.nn.adapterframework.configuration.AutoConfiguringAdapterManager;
-import nl.nn.adapterframework.configuration.Configuration;
 import nl.nn.adapterframework.configuration.ConfigurationException;
-import nl.nn.adapterframework.configuration.ConfigurationWarnings;
-import nl.nn.adapterframework.configuration.IbisContext;
-import nl.nn.adapterframework.configuration.IbisManager;
-import nl.nn.adapterframework.core.Adapter;
 import nl.nn.adapterframework.core.PipeForward;
-import nl.nn.adapterframework.core.PipeLine;
-import nl.nn.adapterframework.core.PipeLineExit;
 import nl.nn.adapterframework.core.PipeLineSession;
-import nl.nn.adapterframework.core.PipeRunException;
-import nl.nn.adapterframework.unmanaged.DefaultIbisManager;
 import nl.nn.adapterframework.validation.ValidatorTestBase;
 import nl.nn.adapterframework.validation.XmlValidatorException;
 
@@ -34,7 +19,7 @@ import nl.nn.adapterframework.validation.XmlValidatorException;
   * @author Michiel Meeuwissen
  */
 
-public class WsdlXmlValidatorTest extends Mockito {
+public class WsdlXmlValidatorTest extends PipeTestBase<WsdlXmlValidator> {
     private static final String SIMPLE                = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/SimpleWsdl/simple.wsdl";
     private static final String SIMPLE_WITH_INCLUDE   = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/SimpleWsdl/simple_withinclude.wsdl";
     private static final String SIMPLE_WITH_REFERENCE = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/SimpleWsdl/simple_withreference.wsdl";
@@ -42,11 +27,14 @@ public class WsdlXmlValidatorTest extends Mockito {
     private static final String DOUBLE_BODY           = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/GetPolicyDetails/GetPolicyDetailsDoubleBody.wsdl";
     private static final String BASIC                 = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl";
 
-    private PipeLineSession session = mock(PipeLineSession.class);
+	@Override
+	public WsdlXmlValidator createPipe() {
+		return new WsdlXmlValidator();
+	}
 
     @Test
     public void wsdlValidate() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE);
         val.setSoapBody("TradePriceRequest");
         val.setThrowException(true);
@@ -58,7 +46,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
     @Test
     public void wsdlValidateWithInclude() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE_WITH_INCLUDE);
         val.setSoapBody("TradePriceRequest");
         val.setThrowException(true);
@@ -70,7 +58,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
     @Test
     public void wsdlValidateWithReference() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE_WITH_REFERENCE);
         val.setSoapBody("TradePriceRequest");
         val.setThrowException(true);
@@ -82,7 +70,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
     @Test(expected = XmlValidatorException.class)
     public void wsdlValidateWithReferenceFail() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE_WITH_REFERENCE);
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
@@ -93,7 +81,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
     @Test
     public void wsdlTibco() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(TIBCO);
         val.setSoapHeader("MessageHeader");
         val.setSoapBody("Request");
@@ -132,7 +120,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
     @Test(expected = XmlValidatorException.class)
     public void wsdlTibcoFailEnvelop() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(TIBCO);
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
@@ -167,7 +155,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
     @Test(expected = XmlValidatorException.class)
     public void wsdlTibcoFailMessage() throws Exception {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+        WsdlXmlValidator val = pipe;
         val.setWsdl(TIBCO);
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
@@ -200,10 +188,10 @@ public class WsdlXmlValidatorTest extends Mockito {
                 "", session);
     }
 
-    @Ignore("Travis has problems with this")
-    @Test
+	@Ignore("Travis has problems with this")
+	@Test
 	public void wsdlReasonSessionKey() throws Exception {
-		WsdlXmlValidator val = new WsdlXmlValidator();
+		WsdlXmlValidator val = pipe;
 		val.setWsdl(SIMPLE);
 		val.setSoapBody("TradePriceRequest");
 		val.setForwardFailureToSuccess(true);
@@ -224,7 +212,7 @@ public class WsdlXmlValidatorTest extends Mockito {
 
 	@Test(expected = ConfigurationException.class)
 	public void wSoapBodyExistsMultipleTimes() throws Exception {
-		WsdlXmlValidator val = new WsdlXmlValidator();
+		WsdlXmlValidator val = pipe;
 		val.setWsdl(DOUBLE_BODY);
 		val.setSoapHeader("MessageHeader");
 		val.setSoapBody("GetPolicyDetails_Request");
@@ -237,86 +225,53 @@ public class WsdlXmlValidatorTest extends Mockito {
 
 	@Test
 	public void warnSchemaLocationAlreadyDefaultValue() throws Exception {
-		// Mock a configuration with an adapter in it
-		IbisManager ibisManager = spy(new DefaultIbisManager());
-		ibisManager.setIbisContext(spy(new IbisContext()));
-		Configuration configuration = new Configuration();
-		configuration.setAdapterManager(new AutoConfiguringAdapterManager());
-		configuration.setName("dummyConfiguration");
-		configuration.setVersion("1");
-		configuration.setIbisManager(ibisManager);
-		ConfigurationWarnings.getInstance().setActiveConfiguration(configuration);
+		pipe.setWsdl(BASIC);
+		pipe.setSoapHeader("MessageHeader");
+		pipe.setSoapBody("GetPolicyDetails_Request");
+		pipe.setAddNamespaceToSchema(true);
+		pipe.setSchemaLocation("http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2 http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 ");
+		pipe.setThrowException(true);
+		pipe.registerForward(new PipeForward("success", null));
+		configureAndStartPipe();
 
-		Adapter adapter = spy(new Adapter());
-		adapter.setName("dummy");
-		PipeLine pl = new PipeLine();
-		pl.setFirstPipe("dummy");
-
-		WsdlXmlValidator val = new WsdlXmlValidator();
-		val.setName("dummy");
-		val.setWsdl(BASIC);
-		val.setSoapHeader("MessageHeader");
-		val.setSoapBody("GetPolicyDetails_Request");
-		val.setAddNamespaceToSchema(true);
-		val.setSchemaLocation("http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2 http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 ");
-		val.setThrowException(true);
-		val.registerForward(new PipeForward("success", null));
-
-		pl.addPipe(val);
-		PipeLineExit ple = new PipeLineExit();
-		ple.setPath("success");
-		ple.setState("success");
-		pl.registerPipeLineExit(ple);
-		adapter.setPipeLine(pl);
-
-		adapter.setConfiguration(configuration);
-		configuration.registerAdapter(adapter);
-
-		assertEquals(1, configuration.getConfigurationWarnings().size());
-		assertEquals("WsdlXmlValidator [dummy] attribute [schemaLocation] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl] already has a default value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2]", configuration.getConfigurationWarnings().getFirst());
-		ConfigurationWarnings.getInstance().setActiveConfiguration(null);
+		assertEquals(1, getConfigurationWarnings().size());
+		assertEquals("WsdlXmlValidator [WsdlXmlValidator under test] attribute [schemaLocation] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl] already has a "
+				+ "default value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2]", 
+				getConfigurationWarnings().get(0));
 	}
 
 	@Test
-	public void warnUseSoapBodyNameSpace() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-		// Mock a configuration with an adapter in it
-		IbisManager ibisManager = spy(new DefaultIbisManager());
-		ibisManager.setIbisContext(spy(new IbisContext()));
-		Configuration configuration = new Configuration();
-		configuration.setAdapterManager(new AutoConfiguringAdapterManager());
-		configuration.setName("dummyConfiguration");
-		configuration.setVersion("1");
-		configuration.setIbisManager(ibisManager);
-		ConfigurationWarnings.getInstance().setActiveConfiguration(configuration);
+	public void warnUseSoapBodyNameSpace() throws Exception {
+		pipe.setWsdl(BASIC);
+		pipe.setSoapHeader("MessageHeader");
+		pipe.setSoapBody("GetPolicyDetails_Request");
+		pipe.setAddNamespaceToSchema(true);
+		pipe.setSchemaLocation("http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/2 schema2");
+		pipe.setThrowException(true);
+		pipe.registerForward(new PipeForward("success", null));
+		configureAndStartPipe();
 
-		Adapter adapter = spy(new Adapter());
-		adapter.setName("dummy");
-		PipeLine pl = new PipeLine();
-		pl.setFirstPipe("dummy");
+		assertEquals(1, getConfigurationWarnings().size());
+		assertEquals("WsdlXmlValidator [WsdlXmlValidator under test] use attribute [soapBodyNamespace] instead of attribute [schemaLocation] with value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1"
+				+ " http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl]", 
+				getConfigurationWarnings().get(0));
+	}
+	
+	@Test
+	public void warnSetAddNamespaceToSchemaTrue() throws Exception {
+		pipe.setWsdl(SIMPLE);
+		pipe.setSoapBody("TradePriceRequest");
+		pipe.setSchemaLocation("dummy schema1");
+		pipe.setThrowException(true);
+		pipe.registerForward(new PipeForward("success", null));
+		configureAndStartPipe();
 
-		WsdlXmlValidator val = new WsdlXmlValidator();
-		val.setName("dummy");
-		val.setWsdl(BASIC);
-		val.setSoapHeader("MessageHeader");
-		val.setSoapBody("GetPolicyDetails_Request");
-		val.setAddNamespaceToSchema(true);
-		val.setSchemaLocation("http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/2 schema2");
-		val.setThrowException(true);
-		val.registerForward(new PipeForward("success", null));
-
-		pl.addPipe(val);
-		PipeLineExit ple = new PipeLineExit();
-		ple.setPath("success");
-		ple.setState("success");
-		pl.registerPipeLineExit(ple);
-		adapter.setPipeLine(pl);
-
-		adapter.setConfiguration(configuration);
-		configuration.registerAdapter(adapter);
-
-		assertEquals(1, configuration.getConfigurationWarnings().size());
-		assertEquals("WsdlXmlValidator [dummy] use attribute [soapBodyNamespace] instead of attribute [schemaLocation] with value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl]", configuration.getConfigurationWarnings().getFirst());
-		ConfigurationWarnings.getInstance().setActiveConfiguration(null);
+		assertEquals(1, getConfigurationWarnings().size());
+		assertEquals("WsdlXmlValidator [WsdlXmlValidator under test] attribute [schemaLocation] for wsdl [/Validation/Wsdl/SimpleWsdl/simple.wsdl]"
+				+ " should only be set when addNamespaceToSchema=true", 
+				getConfigurationWarnings().get(0));
+		
+        pipe.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\"><Body><TradePriceRequest xmlns=\"http://example.com/stockquote.xsd\"><tickerSymbol>foo</tickerSymbol></TradePriceRequest></Body></Envelope>", session);
 	}
 }
 
